--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.11",
+    "clsx": "^2.1.1",
     "fumadocs-core": "15.2.12",
     "fumadocs-mdx": "11.6.1",
     "fumadocs-ui": "15.2.12",
     "motion": "^12.9.2",
     "next": "15.3.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
